configuration tab misalignment fixed

--- a/app-ui/imports/ui/pages/Configuration.css
+++ b/app-ui/imports/ui/pages/Configuration.css
@@ -16,7 +16,7 @@ ul.tab {
     width: 26%;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch;
     justify-items: center;
     padding: 0px;
     padding-bottom: 5px;
